--- a/css/styles.css
+++ b/css/styles.css
@@ -516,33 +516,22 @@ body .wrap {
   width: 100%;
 }
 
-.news-main {
-  height: 1700px;
-}
-
 .news-section-wrapper {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: flex-start;
   flex-wrap: wrap;
-  margin: 35px;
-  position: relative;
-  width: 1200px;
+  width: 100%;
+  margin-top: 40px;
 }
 .news-section-wrapper .section-div:hover {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 .news-section-wrapper .section-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  max-width: 30%;
+  max-width: 370px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.12);
   transition: box-shadow 0.35s ease;
-  position: absolute;
 }
 .news-section-wrapper .section-div img {
   max-width: 100%;
@@ -593,32 +582,23 @@ body .wrap {
   color: purple;
 }
 .news-section-wrapper .ios17 {
-  left: 0px;
-  top: 0px;
+  margin: 0px 0px -20px;
 }
 .news-section-wrapper .new-device {
-  left: 383px;
-  top: 0px;
-}
-.news-section-wrapper .samsung-ring {
-  left: 766px;
-  top: 0px;
+  margin: 0px 0px 20px;
 }
 .news-section-wrapper .new-audi {
-  left: 0px;
-  top: 526px;
+  margin: -45px 0px 0px;
 }
-.news-section-wrapper .apple-store {
-  left: 383px;
-  top: 566px;
+.news-section-wrapper .samsung-ring {
+  margin: 0px 0px -20px;
 }
 .news-section-wrapper .apple-2022 {
-  left: 766px;
-  top: 469px;
+  margin: -70px 0px;
 }
 .news-section-wrapper .s22-sales {
-  left: 766px;
-  top: 1011px;
+  margin: 25px 0px;
+  align-self: left;
 }
 
 .wrapper .title h1 {
