--- a/scss/pages.scss/_news.scss
+++ b/scss/pages.scss/_news.scss
@@ -14,7 +14,6 @@
     }
 
     .section-div {
-        // @include goFlex(column, space-between, center, nowrap);
         max-width: 370px;
         box-shadow: 0 0 4px rgba(0, 0, 0, .12);
         transition: box-shadow .35s ease;
@@ -72,28 +71,59 @@
     }
 
     .ios17 {
-        margin: 0px 0px -20px;
+        margin: 0px 5px -20px;
     }
 
     .new-device {
-        margin: 0px 0px 20px;
+        margin: 0px 5px 20px;
     }
 
     .new-audi {
-        margin: -45px 0px 0px;
+        margin: -45px 5px 0px;
     }
 
     .samsung-ring {
-        margin: 0px 0px -20px;
+        margin: 0px 5px -20px;
     }
 
     .apple-2022 {
-        margin: -70px 0px;
+        margin: -70px 5px;
     }
 
     .s22-sales {
         margin: 25px 0px;
-        align-self: left;
+    }
+
+    @media (max-width: 1156px) {
+
+        .ios17 {
+            margin: 0px 5px 0px;
+        }
+    
+        .new-device {
+            margin: 0px 5px 20px;
+        }
+    
+        .new-audi {
+            margin: 0px 5px 0px;
+        }
+    
+        .samsung-ring {
+            margin: 0px 5px 0px;
+        }
+    
+        .apple-2022 {
+            margin: 0px 5px;
+        }
+    
+        .s22-sales {
+            margin: 0px 0px;
+        }
+
+    }
+
+    @media (max-width: 776px) {
+        
     }
 
 
