--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -126,24 +126,30 @@ body {
         }
 
         .burger-menu {
-            
-            a {
-                @include goFlex(row);
-                color: #333333;
-            }
+            @include goFlex(row);
+            color: #333333; 
+            position: relative;
+            cursor: pointer;
 
-            .burger-div {
-                @include goFlex(column, space-between, center);
+            appearance: none;
+            background: none;
+            outline: none;
+            border: none;
+
+            .hamburger {
+                @include goFlex(column, space-around, center);
                 margin: 1px 10px 1px 0px;
             }
 
-            .burger {
-                display: inline-block;
+            .hamburger .bar, .hamburger:before, .hamburger:after {
+                display: block;
+                content: '';
                 width: 18px;
                 height: 2px;
                 background-color: #333333;
                 border-radius: 5px;
             }
+
 
             .menu {
                 @include robotoFont(700, 14px);
@@ -337,3 +343,21 @@ body {
         transform: scale(1.15);
     }
 }
+
+// .hamburger {
+//     width: 50px;
+//     height: 50px;
+//     display: block;
+//     background-color: black;
+// }
+
+// .hamburger .bar, .hamburger:before, .hamburger:after {
+//     display: block;
+//     content: '';
+//     width: 100%;
+//     height: 5px;
+//     background-color: #fff;
+//     margin: 6px 0px;
+// }
+
+
