--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -195,9 +195,14 @@ body {
     .section2 {
         margin: 50px 0px;
 
+
         
         .images {
             @include goFlex(row, space-around, center);
+
+            @media (max-width: 1200px) {
+                display: none;
+            }
 
             div {
                 text-align: center;
