--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,3 +11,4 @@
 @import "pages.scss/apple";
 @import "pages.scss/phones.scss/iphone-xr-64gb";
 @import "pages.scss/news.pages.scss/news-pages";
+@import "pages.scss/services";
