--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,8 @@ body .wrap {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   padding: 0px 15px;
+  position: static;
+  z-index: 99;
 }
 @media (max-width: 900px) {
   .header .responsive-header {
@@ -236,9 +238,19 @@ body .wrap {
   height: 2px;
   background-color: #333333;
   border-radius: 5px;
+  transition: all 0.5s ease;
 }
 .header .responsive-header .burger-menu .hamburger.is-active:after {
-  opacity: 10%;
+  transform: rotate(45deg) translate(-7px, 0px);
+  transition: all 0.5s ease;
+}
+.header .responsive-header .burger-menu .hamburger.is-active:before {
+  transform: rotate(-45deg) translate(-9px, 1px);
+  transition: all 0.5s ease;
+}
+.header .responsive-header .burger-menu .hamburger.is-active .bar {
+  opacity: 0;
+  transition: all 0.5s ease;
 }
 .header .responsive-header .burger-menu .menu {
   font-family: "Roboto";
@@ -257,6 +269,33 @@ body .wrap {
 .header .responsive-header .search .search-icon {
   font-size: 18px;
   color: #333333;
+}
+
+.mobile-nav {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 100%;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 98;
+  background-color: white;
+  padding-top: 120px;
+  transition: 0.5s;
+}
+.mobile-nav a {
+  display: block;
+  width: 100%;
+  max-width: 150px;
+  text-align: center;
+  margin: 0 auto 16px;
+  padding: 12px 16px;
+  background-color: black;
+  color: white;
+}
+
+.mobile-nav.is-active {
+  right: 55%;
 }
 
 .index-main .carousel {
