--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -120,6 +120,8 @@ body {
         border-bottom-width: 1px;
         border-bottom-style: solid;
         padding: 0px 15px;
+        position: static;
+        z-index: 99;
 
         @media (max-width: 900px) {
             display: flex;
@@ -148,11 +150,27 @@ body {
                 height: 2px;
                 background-color: #333333;
                 border-radius: 5px;
+                transition: all 0.5s ease;
             }
 
             .hamburger.is-active:after {
-                opacity: 10%;
+                transform: rotate(45deg) translate(-7px, 0px); 
+                transition: all 0.5s ease;
+
             }
+
+            .hamburger.is-active:before {
+                transform: rotate(-45deg) translate(-9px, 1px); 
+                transition: all 0.5s ease;
+
+            }
+
+            .hamburger.is-active .bar {
+                opacity: 0;
+                transition: all 0.5s ease;
+
+            }
+
 
             .menu {
                 @include robotoFont(700, 14px);
@@ -177,6 +195,36 @@ body {
             }
         }
     }
+}
+
+.mobile-nav {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 100%;
+    width: 100%;
+    min-height: 100vh;
+    z-index: 98;
+    background-color: white;
+    padding-top: 120px;
+    transition: 0.5s;
+
+    a {
+        display: block;
+        width: 100%;
+        max-width: 150px;
+        text-align: center;
+        margin: 0 auto 16px;
+        padding: 12px 16px;
+        background-color: black;
+        color: white;
+    }
+}
+
+
+
+.mobile-nav.is-active {
+    right: 55%;
 }
 
 .index-main {
