--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -25,6 +25,10 @@ body {
 
         .header-img {
             padding: 0px 15px;
+
+            .tbc-logo {
+                width: 50px;
+            }
         }
 
         ul {
