--- a/css/styles.css
+++ b/css/styles.css
@@ -278,22 +278,28 @@ body .wrap {
   position: fixed;
   top: 0;
   right: 100%;
-  width: 50%;
+  width: 45%;
   min-height: 100vh;
   z-index: 98;
   background-color: white;
-  padding-top: 120px;
+  padding-top: 70px;
   transition: 0.5s;
 }
 .mobile-nav a {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
   width: 100%;
-  max-width: 150px;
-  text-align: center;
   margin: 0 auto 16px;
-  padding: 12px 16px;
-  background-color: black;
-  color: white;
+  padding: 10px 16px;
+  border-bottom: 1px solid rgba(129, 129, 129, 0.2);
+  color: #2d2a2a;
+  letter-spacing: 0.2px;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 1.3;
 }
 
 .mobile-nav.is-active {
