--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -224,6 +224,14 @@ body {
         font-size: 13px;
         line-height: 1.3;
     }
+    
+    a:hover {
+        color: #8e03a4;
+    }
+
+    .header-main {
+        color: #8e03a4 !important;
+    }
 }
 
 
