--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,9 @@ body .wrap {
   max-height: 60px;
   padding: 5px 0px;
 }
+.header .responsive-header .icon .tbc-logo {
+  width: 35px;
+}
 .header .responsive-header .search {
   padding: 0px 10px;
 }
@@ -291,15 +294,16 @@ body .wrap {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+  font-family: "Roboto";
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 1.3;
   width: 100%;
   margin: 0 auto 16px;
   padding: 10px 16px;
   border-bottom: 1px solid rgba(129, 129, 129, 0.2);
   color: #2d2a2a;
   letter-spacing: 0.2px;
-  font-weight: 600;
-  font-size: 13px;
-  line-height: 1.3;
 }
 .mobile-nav a:hover {
   color: #8e03a4;
