--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -187,6 +187,10 @@ body {
                 max-height: 60px;
                 padding: 5px 0px;
             }
+
+            .tbc-logo {
+                width: 35px;
+            }
         }
 
         .search {
@@ -214,15 +218,13 @@ body {
 
     a {
         @include goFlex(row, flex-start, center);
+        @include robotoFont(600, 13px, 1.3);
         width: 100%;
         margin: 0 auto 16px;
         padding: 10px 16px;
         border-bottom: 1px solid rgba(129, 129, 129, .2);
         color: #2d2a2a;
         letter-spacing: .2px;
-        font-weight: 600;
-        font-size: 13px;
-        line-height: 1.3;
     }
     
     a:hover {
