--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,8 +7,7 @@
 @import "pages.scss/about-us";
 @import "pages.scss/contact";
 @import "pages.scss/news";
-@import "pages.scss/samsung";
-@import "pages.scss/apple";
+@import "pages.scss/apple-samsung";
 @import "pages.scss/phones.scss/iphone-xr-64gb";
 @import "pages.scss/news.pages.scss/news-pages";
 @import "pages.scss/services";
