--- a/scss/pages.scss/_apple-samsung.scss
+++ b/scss/pages.scss/_apple-samsung.scss
@@ -2,6 +2,8 @@
 .wrapper {
 
     .title {
+        @include goFlex(row, center, center);
+        padding: 30px 0px;
 
         h1 {
             font-weight: 600;
