--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,7 @@ body .wrap {
 }
 
 .mobile-nav {
-  display: block;
+  display: none;
   position: fixed;
   top: 0;
   right: 100%;
@@ -321,6 +321,11 @@ body .wrap {
 
 .mobile-nav.is-active {
   right: 55%;
+}
+@media (max-width: 900px) {
+  .mobile-nav.is-active {
+    display: block;
+  }
 }
 
 .index-main .carousel {
