--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,6 @@
 @import "pages.scss/contact";
 @import "pages.scss/news";
 @import "pages.scss/apple-samsung";
-@import "pages.scss/phones.scss/iphone-xr-64gb";
+@import "pages.scss/phones.scss/phones";
 @import "pages.scss/news.pages.scss/news-pages";
 @import "pages.scss/services";
