--- a/scss/pages.scss/phones.scss/_phones.scss
+++ b/scss/pages.scss/phones.scss/_phones.scss
@@ -175,6 +175,26 @@
                     p {
                         color: #fff;
                     }
+                }   
+
+                .price-btn.clicked {
+
+                    div {
+                        background-color: #8e03a4;
+                    }
+
+                    h1 {
+                        color: #fff;
+                    }
+
+                    h2 {
+                        color: #fff;
+                    }
+
+                    p {
+                        color: #fff;
+                    }
+
                 }
             }
 
@@ -206,5 +226,110 @@
                 }
             }
         }
+    }
+
+    .section2 {
+        @include goFlex(column, space-between, flex-start);
+
+        border-top: 1px solid black;
+        // border-color: rgba(129, 129, 129, .2);
+        padding-top: 40px;
+
+        .section-2-text {
+            width: 100%;
+            max-width: 1160px;
+            // border-top: 2px solid rgba(119, 119, 119, .17);
+            // border-bottom: 1px solid rgba(119, 119, 119, .17);
+            border-top: 2px solid black;
+            border-bottom: 1px solid black;
+            margin: 0px 20px 10px;
+
+            h1 {
+                @include robotoFont(600, 16px);
+                display: block;
+                color: #333333;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                transition: all .35s ease;
+            }
+
+            h1:hover {
+                color: #8e03a4;
+            }
+        }
+
+        .comment-div {
+            @include goFlex(row, space-between, flex-start);
+            width: 100%;
+
+            .left {
+
+                .left-div {
+                    max-width: 500px;
+                    width: 100%;
+                    height: auto;
+                    border: 2px dashed #000000 !important;
+                    border-radius: 10px;
+                    padding: 10px;
+                    margin: 10px 20px;
+                }
+
+                .comment-wrap {
+                    @include goFlex(row, flex-start, center);
+
+                    .img-div {
+                        border: 2px solid #000000 !important;
+                        border-radius: 3px !important;
+                        padding: 4px;
+                        margin: 0px 25px 0px 0px;
+
+                        img {
+                            max-width: 50px;
+
+                        }
+                        
+                    }
+
+
+                    .text-wrap {
+                        @include goFlex(column, space-between, flex-start);
+                        max-width: 350px;
+
+                        p {
+                            @include robotoFont(400, 15px, 1.5);
+                            color: #777;
+                            margin: 8px 0px;
+                                
+                        }
+
+                        strong {
+                            @include robotoFont(600, 16px);
+                            color: #2d2a2a;
+                        }
+
+                        span {
+                            font-style: italic;
+                        }
+                    }
+                }
+            }
+
+            .right {
+                @include goFlex(column, space-between, center);
+                max-width: 600px;
+
+                h1 {
+                    @include robotoFont(400, 16px);
+                    color: #777;
+                }
+
+                span {
+                    color: #E01020;
+                    font-size: 16px;
+                }
+            }
+        }
+
+
     }
 }
